--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="how-grid">
 
         <div class="how-item apple-fade">
-            <img src="assets/icon-mic.png" class="how-icon">
+            <img src="icon-mic.png" class="how-icon">
             <h3>1. Record Your Speech</h3>
             <p>Tap once and speak naturally for 20–30 seconds.</p>
         </div>
