--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- HEADER -->
     <header class="header">
-        <img src="assets/logo.png" class="logo" alt="TalkyAI Logo">
+        <img src="logo.png" class="logo" alt="TalkyAI Logo">
         <a href="waitlist.html">
         <button class="header-btn">Join Waitlist</button>
         </a>
@@ -43,21 +43,21 @@
     <section class="features fade-in">
         <div class="card fade-in parallax apple-fade" data-speed="0.10">
 
-            <img src="assets/icon-score.png" class="card-icon">
+            <img src="icon-score.png" class="card-icon">
             <div class="card-label">AI Score</div>
             <h4 class="card-title">Instant Speaking Score</h4>
         </div>
 
         <div class="card fade-in parallax apple-fade" data-speed="0.10">
 
-            <img src="assets/icon-bubble.png" class="card-icon">
+            <img src="icon-bubble.png" class="card-icon">
             <div class="card-label">Feedback</div>
             <h4 class="card-title">Personalized Feedback</h4>
         </div>
 
         <div class="card fade-in parallax apple-fade" data-speed="0.10">
 
-            <img src="assets/icon-chart.png" class="card-icon">
+            <img src="icon-chart.png" class="card-icon">
             <div class="card-label">Progress</div>
             <h4 class="card-title">Track Improvement</h4>
         </div>
@@ -77,13 +77,13 @@
         </div>
 
         <div class="how-item apple-fade">
-            <img src="assets/icon-chip.png" class="how-icon">
+            <img src="icon-chip.png" class="how-icon">
             <h3>2. AI Analyzes Everything</h3>
             <p>TalkyAI evaluates clarity, pacing, filler words, tone, and confidence.</p>
         </div>
 
         <div class="how-item apple-fade">
-            <img src="assets/icon-stars.png" class="how-icon">
+            <img src="icon-stars.png" class="how-icon">
             <h3>3. Get Instant Feedback</h3>
             <p>Receive a concise score + personalized insights to improve immediately.</p>
         </div>
