--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <!-- HOW IT WORKS SECTION -->
 <section class="how">
-    <h2 class="how-title">How TalkyAI Works</h2>
-    <p class="how-sub">Your personal AI speaking coach, available in seconds.</p>
+    <h2 class="how-title">Your personal AI speaking coach, available in seconds.</h2>
+    <p class="how-sub"></p>
 
     <div class="how-grid">
 
