--- a/waitlist.html
+++ b/waitlist.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join the Waitlist – TalkyAI</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 /* PAGE RESET */
@@ -13,8 +16,8 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: #fff;
-    font-family: "Inter", sans-serif;
+    background: linear-gradient(135deg, #f0f7ff 0%, #e0f2fe 50%, #ffffff 100%);
+    font-family: 'Inter', sans-serif;
 }
 
 /* PERFECT CENTER */
@@ -29,12 +32,13 @@ html, body {
 .waitlist-card {
     width: 500px;
     max-width: 90%;
-    background: rgba(255,255,255,0.75);
+    background: rgba(255,255,255,0.9);
     backdrop-filter: blur(12px);
     padding: 50px;
     border-radius: 28px;
     text-align: center;
-    box-shadow: 0 25px 55px rgba(0,0,0,0.08);
+    box-shadow: 0 25px 55px rgba(37, 99, 235, 0.15);
+    border: 1px solid rgba(37, 99, 235, 0.1);
     animation: fadeUp 0.8s ease-out;
 }
 
@@ -47,12 +51,128 @@ html, body {
     font-size: 40px;
     font-weight: 800;
     margin-bottom: 12px;
+    color: #1e3a8a;
+    font-family: 'Inter', sans-serif;
 }
 
 .waitlist-card p {
     font-size: 18px;
     color: #555;
     margin-bottom: 30px;
+    font-family: 'Inter', sans-serif;
+}
+
+/* INPUTS */
+.waitlist-input {
+    padding: 16px 20px;
+    border: 2px solid rgba(37, 99, 235, 0.3);
+    border-radius: 12px;
+    font-size: 16px;
+    background: #fff;
+    transition: 0.25s ease;
+    font-family: 'Inter', sans-serif;
+}
+
+.waitlist-input:focus {
+    background: #f0f7ff;
+    border-color: #2563eb;
+    outline: none;
+}
+
+/* ANIMATED BUTTON */
+.waitlist-submit {
+    position: relative;
+    width: 100%;
+    padding: 16px 20px;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    overflow: hidden;
+    z-index: 1;
+    transition: transform 0.25s ease, box-shadow 0.25s ease;
+    box-shadow: 0px 8px 20px rgba(30, 58, 138, 0.4);
+    font-family: 'Inter', sans-serif;
+}
+
+.waitlist-submit::before {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background: linear-gradient(
+        45deg,
+        #0c1e4a,
+        #1e3a8a,
+        #2563eb,
+        #3b82f6,
+        #2563eb,
+        #1e3a8a,
+        #0c1e4a
+    );
+    background-size: 400% 400%;
+    animation: gradientShift 4s ease infinite;
+    z-index: -1;
+}
+
+.waitlist-submit::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 600 600"><filter id="noiseFilter"><feTurbulence type="fractalNoise" baseFrequency="0.9" numOctaves="3" stitchTiles="stitch"/><feColorMatrix type="saturate" values="0"/></filter><rect width="100%" height="100%" filter="url(%23noiseFilter)" opacity="0.15"/></svg>');
+    opacity: 0.5;
+    z-index: -1;
+    pointer-events: none;
+}
+
+@keyframes gradientShift {
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
+}
+
+.waitlist-submit:hover {
+    transform: translateY(-3px);
+    box-shadow: 0px 12px 28px rgba(30, 58, 138, 0.5);
+}
+
+.waitlist-submit:active {
+    transform: translateY(-1px) scale(0.98);
+}
+
+.waitlist-submit:disabled {
+    opacity: 0.7;
+    cursor: not-allowed;
+}
+
+/* Success message */
+.success-message {
+    margin-top: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #10b981;
+    opacity: 0;
+    transform: translateY(10px);
+    transition: 0.4s ease;
+    font-family: 'Inter', sans-serif;
+}
+
+.success-message.show {
+    opacity: 1;
+    transform: translateY(0);
 }
 </style>
 </head>
@@ -73,7 +193,7 @@ html, body {
             <button type="submit" class="waitlist-submit">Join Waitlist</button>
         </form>
 
-        
+        <div id="successMessage" class="success-message">✓ You're on the list!</div>
 
     </div>
 </div>
@@ -111,14 +231,12 @@ document.getElementById("waitlist-form").addEventListener("submit", async functi
 
     setTimeout(() => {
         button.innerText = "Join Waitlist";
-        button.style.background = "black";
+        button.style.background = "";
         button.disabled = false;
         success.classList.remove("show");
     }, 3000);
 });
-
 </script>
 
 </body>
 </html>
-
